--- a/UA1/PLN_NLTK_Simplificado.ipynb
+++ b/UA1/PLN_NLTK_Simplificado.ipynb
@@ -2,6 +2,16 @@
   "cells": [
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/nobertomaciel/PLN-ANIMA/blob/main/UA1/PLN_NLTK_Simplificado.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "id": "38dbb0df",
       "metadata": {
         "id": "38dbb0df"
@@ -13,7 +23,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "id": "3a573919",
       "metadata": {
         "colab": {
@@ -42,7 +52,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "id": "8a06e60a",
       "metadata": {
         "id": "8a06e60a"
@@ -59,7 +69,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "id": "5a034941",
       "metadata": {
         "colab": {
@@ -101,7 +111,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "id": "257c0aaa",
       "metadata": {
         "id": "257c0aaa"
@@ -120,7 +130,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "id": "cd70445b",
       "metadata": {
         "colab": {
@@ -152,7 +162,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "id": "29ffc4ec",
       "metadata": {
         "colab": {
@@ -179,7 +189,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "id": "b25ef309",
       "metadata": {
         "colab": {
@@ -207,7 +217,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 32,
+      "execution_count": null,
       "id": "9522ac03",
       "metadata": {
         "colab": {
@@ -269,7 +279,8 @@
   ],
   "metadata": {
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     },
     "language_info": {
       "name": "python"
