--- a/PLN_Analise_de_sentimentos.ipynb
+++ b/PLN_Analise_de_sentimentos.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOzKboRZJe6YmZ0YI38G+mU",
+      "authorship_tag": "ABX9TyP5QazHN2n23Du+uAH7zufH",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,106 +28,212 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "source": [
+        "!pip install gensim\n",
+        "!pip install nltk"
+      ],
       "metadata": {
-        "id": "vPSPGP-0ONOm"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "JPE533voOoJk",
+        "outputId": "3e3e359c-e1b7-4ceb-b03b-1e8efc50dff0"
       },
-      "outputs": [],
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Requirement already satisfied: gensim in /usr/local/lib/python3.12/dist-packages (4.4.0)\n",
+            "Requirement already satisfied: numpy>=1.18.5 in /usr/local/lib/python3.12/dist-packages (from gensim) (2.0.2)\n",
+            "Requirement already satisfied: scipy>=1.7.0 in /usr/local/lib/python3.12/dist-packages (from gensim) (1.16.3)\n",
+            "Requirement already satisfied: smart_open>=1.8.1 in /usr/local/lib/python3.12/dist-packages (from gensim) (7.4.4)\n",
+            "Requirement already satisfied: wrapt in /usr/local/lib/python3.12/dist-packages (from smart_open>=1.8.1->gensim) (2.0.0)\n",
+            "Requirement already satisfied: nltk in /usr/local/lib/python3.12/dist-packages (3.9.1)\n",
+            "Requirement already satisfied: click in /usr/local/lib/python3.12/dist-packages (from nltk) (8.3.0)\n",
+            "Requirement already satisfied: joblib in /usr/local/lib/python3.12/dist-packages (from nltk) (1.5.2)\n",
+            "Requirement already satisfied: regex>=2021.8.3 in /usr/local/lib/python3.12/dist-packages (from nltk) (2024.11.6)\n",
+            "Requirement already satisfied: tqdm in /usr/local/lib/python3.12/dist-packages (from nltk) (4.67.1)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 15,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "vPSPGP-0ONOm",
+        "outputId": "ec8b05f0-bdd8-46bb-fe60-6e18a4fe3fce"
+      },
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Relatório de Classificação:\n",
+            "              precision    recall  f1-score   support\n",
+            "\n",
+            "    Negativo       0.00      0.00      0.00         2\n",
+            "    Positivo       0.33      1.00      0.50         1\n",
+            "\n",
+            "    accuracy                           0.33         3\n",
+            "   macro avg       0.17      0.50      0.25         3\n",
+            "weighted avg       0.11      0.33      0.17         3\n",
+            "\n",
+            "Matriz de Confusão:\n",
+            "[[0 2]\n",
+            " [0 1]]\n",
+            "\n",
+            "Resultados em novas avaliações:\n",
+            "- A câmera é incrível e a bateria dura o dia todo. → Positivo 😀\n",
+            "- O produto veio quebrado e não liga mais. → Positivo 😀\n",
+            "- Entrega rápida, mas o desempenho é ruim. → Positivo 😀\n",
+            "- Excelente custo-benefício, estou muito satisfeito! → Positivo 😀\n",
+            "\n",
+            "Palavras mais similares a 'ótimo':\n",
+            "[('acabou', 0.2474919706583023), ('terrível', 0.19713576138019562), ('parece', 0.1907748281955719), ('poucas', 0.18167969584465027), ('risca', 0.16631169617176056), ('maravilhoso', 0.1545863002538681), ('desde', 0.12634193897247314), ('dia', 0.11094342917203903), ('tela', 0.1076011136174202), ('expectativas', 0.08770156651735306)]\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "[nltk_data] Downloading package punkt to /root/nltk_data...\n",
+            "[nltk_data]   Package punkt is already up-to-date!\n",
+            "[nltk_data] Downloading package punkt_tab to /root/nltk_data...\n",
+            "[nltk_data]   Package punkt_tab is already up-to-date!\n",
+            "[nltk_data] Downloading package stopwords to /root/nltk_data...\n",
+            "[nltk_data]   Package stopwords is already up-to-date!\n",
+            "/usr/local/lib/python3.12/dist-packages/sklearn/metrics/_classification.py:1565: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+            "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", len(result))\n",
+            "/usr/local/lib/python3.12/dist-packages/sklearn/metrics/_classification.py:1565: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+            "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", len(result))\n",
+            "/usr/local/lib/python3.12/dist-packages/sklearn/metrics/_classification.py:1565: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+            "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", len(result))\n"
+          ]
+        }
+      ],
       "source": [
         "# ===============================================\n",
-        "# Exemplo prático de Processamento de Linguagem Natural (PLN)\n",
-        "# Aplicação: Análise de sentimentos de avaliações de produtos\n",
-        "# Técnicas: Tokenização, Stopwords, Bag-of-Words, TF-IDF, Word2Vec\n",
+        "# Exemplo completo de PLN com Classificação de Sentimentos\n",
         "# ===============================================\n",
         "\n",
         "import re\n",
         "import nltk\n",
         "import pandas as pd\n",
         "from sklearn.feature_extraction.text import CountVectorizer, TfidfVectorizer\n",
+        "from sklearn.model_selection import train_test_split\n",
+        "from sklearn.linear_model import LogisticRegression\n",
+        "from sklearn.metrics import classification_report, confusion_matrix\n",
         "from gensim.models import Word2Vec\n",
         "from nltk.corpus import stopwords\n",
         "\n",
-        "# Baixar recursos necessários do NLTK (apenas na primeira execução)\n",
+        "# ===============================================\n",
+        "# 1. Recursos do NLTK\n",
+        "# ===============================================\n",
         "nltk.download('punkt')\n",
+        "nltk.download('punkt_tab')\n",
         "nltk.download('stopwords')\n",
         "\n",
         "# ===============================================\n",
-        "# 1️⃣ Exemplo de dataset realista\n",
+        "# 2. Dataset realista de avaliações\n",
         "# ===============================================\n",
-        "avaliacoes = [\n",
-        "    \"O celular é ótimo, tem uma câmera excelente!\",\n",
-        "    \"Horrível! Que produto terrível, não recomendo a ninguém.\",\n",
-        "    \"Entrega rápida e produto de boa qualidade.\",\n",
-        "    \"A bateria dura pouco e esquenta muito. Péssimo!\",\n",
-        "    \"Muito bom, atendeu todas as minhas expectativas.\",\n",
-        "]\n",
+        "# 1 = positivo, 0 = negativo\n",
+        "dados = {\n",
+        "    \"avaliacao\": [\n",
+        "        \"O celular é ótimo, tem uma câmera excelente!\",\n",
+        "        \"Horrível! Que produto terrível, não recomendo a ninguém.\",\n",
+        "        \"Entrega rápida e produto de boa qualidade.\",\n",
+        "        \"A bateria dura pouco e esquenta muito. Péssimo!\",\n",
+        "        \"Muito bom, atendeu todas as minhas expectativas.\",\n",
+        "        \"Não gostei, o material parece frágil e a tela risca fácil.\",\n",
+        "        \"Superou minhas expectativas, recomendo demais!\",\n",
+        "        \"O som é baixo e a bateria acabou em poucas horas.\",\n",
+        "        \"Produto maravilhoso, desempenho excelente.\",\n",
+        "        \"Defeituoso, não funcionou desde o primeiro dia.\"\n",
+        "    ],\n",
+        "    \"sentimento\": [1, 0, 1, 0, 1, 0, 1, 0, 1, 0]\n",
+        "}\n",
+        "\n",
+        "df = pd.DataFrame(dados)\n",
         "\n",
         "# ===============================================\n",
-        "# 2️⃣ Função de pré-processamento\n",
+        "# 3. Função de pré-processamento\n",
         "# ===============================================\n",
         "def preprocessar_texto(texto):\n",
-        "    texto = texto.lower()                               # minúsculas\n",
-        "    texto = re.sub(r'[^a-zA-Zà-úÀ-Ú\\s]', '', texto)     # remove pontuação e números\n",
-        "    tokens = nltk.word_tokenize(texto, language='portuguese')  # tokenização\n",
+        "    texto = texto.lower()\n",
+        "    texto = re.sub(r'[^a-zA-Zà-úÀ-Ú\\s]', '', texto)\n",
+        "    tokens = nltk.word_tokenize(texto, language='portuguese')\n",
         "    stop_words = set(stopwords.words('portuguese'))\n",
-        "    tokens = [t for t in tokens if t not in stop_words and len(t) > 2]  # remove stopwords\n",
+        "    tokens = [t for t in tokens if t not in stop_words and len(t) > 2]\n",
         "    return \" \".join(tokens)\n",
         "\n",
-        "avaliacoes_limpo = [preprocessar_texto(a) for a in avaliacoes]\n",
-        "\n",
-        "print(\"🔹 Textos após pré-processamento:\")\n",
-        "print(avaliacoes_limpo)\n",
-        "print()\n",
+        "df[\"texto_limpo\"] = df[\"avaliacao\"].apply(preprocessar_texto)\n",
         "\n",
         "# ===============================================\n",
-        "# 3️⃣ Representação Bag-of-Words\n",
+        "# 4. Representações vetoriais (Bag-of-Words e TF-IDF)\n",
         "# ===============================================\n",
-        "bow_vectorizer = CountVectorizer()\n",
-        "bow_matriz = bow_vectorizer.fit_transform(avaliacoes_limpo)\n",
-        "\n",
-        "print(\"🔹 Representação Bag-of-Words (sparse matrix):\")\n",
-        "print(pd.DataFrame(bow_matriz.toarray(), columns=bow_vectorizer.get_feature_names_out()))\n",
-        "print()\n",
+        "vectorizer = TfidfVectorizer()\n",
+        "X = vectorizer.fit_transform(df[\"texto_limpo\"])\n",
+        "y = df[\"sentimento\"]\n",
         "\n",
         "# ===============================================\n",
-        "# 4️⃣ Representação TF-IDF\n",
+        "# 5. Divisão de dados (treino e teste)\n",
         "# ===============================================\n",
-        "tfidf_vectorizer = TfidfVectorizer()\n",
-        "tfidf_matriz = tfidf_vectorizer.fit_transform(avaliacoes_limpo)\n",
-        "\n",
-        "print(\"🔹 Representação TF-IDF:\")\n",
-        "print(pd.DataFrame(tfidf_matriz.toarray(), columns=tfidf_vectorizer.get_feature_names_out()))\n",
-        "print()\n",
+        "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.3, random_state=42)\n",
         "\n",
         "# ===============================================\n",
-        "# 5️⃣ Representação Word2Vec\n",
+        "# 6. Aplicação do Machine Learning: modelo de classificação (Regressão Logística)\n",
         "# ===============================================\n",
-        "# Para o Word2Vec, usamos listas de tokens (não texto único)\n",
-        "tokens_avaliacoes = [a.split() for a in avaliacoes_limpo]\n",
+        "modelo = LogisticRegression(max_iter=1000)\n",
+        "modelo.fit(X_train, y_train)\n",
         "\n",
-        "modelo_w2v = Word2Vec(sentences=tokens_avaliacoes, vector_size=50, window=3, min_count=1, sg=1)\n",
-        "print(\"🔹 Vocabulário do modelo Word2Vec:\")\n",
-        "print(list(modelo_w2v.wv.index_to_key))\n",
-        "print()\n",
+        "# ===============================================\n",
+        "# 7. Avaliação do modelo\n",
+        "# ===============================================\n",
+        "y_pred = modelo.predict(X_test)\n",
+        "print(\"Relatório de Classificação:\")\n",
+        "print(classification_report(y_test, y_pred, target_names=[\"Negativo\", \"Positivo\"]))\n",
         "\n",
-        "# Exemplo: similaridade entre palavras\n",
-        "print(\"🔹 Similaridade entre 'ótimo' e 'excelente':\")\n",
+        "print(\"Matriz de Confusão:\")\n",
+        "print(confusion_matrix(y_test, y_pred))\n",
+        "\n",
+        "# ===============================================\n",
+        "# 8. Teste com novas avaliações\n",
+        "# ===============================================\n",
+        "novas_avaliacoes = [\n",
+        "    \"A câmera é incrível e a bateria dura o dia todo.\",\n",
+        "    \"O produto veio quebrado e não liga mais.\",\n",
+        "    \"Entrega rápida, mas o desempenho é ruim.\",\n",
+        "    \"Excelente custo-benefício, estou muito satisfeito!\"\n",
+        "]\n",
+        "\n",
+        "# Pré-processar e transformar\n",
+        "novas_proc = [preprocessar_texto(a) for a in novas_avaliacoes]\n",
+        "X_novas = vectorizer.transform(novas_proc)\n",
+        "predicoes = modelo.predict(X_novas)\n",
+        "\n",
+        "# Exibir resultados\n",
+        "print(\"\\nResultados em novas avaliações:\")\n",
+        "for texto, pred in zip(novas_avaliacoes, predicoes):\n",
+        "    sentimento = \"Positivo 😀\" if pred == 1 else \"Negativo 😞\"\n",
+        "    print(f\"- {texto} → {sentimento}\")\n",
+        "\n",
+        "# ===============================================\n",
+        "# 9. Word2Vec (para análise semântica complementar)\n",
+        "# ===============================================\n",
+        "tokens = [t.split() for t in df[\"texto_limpo\"]]\n",
+        "modelo_w2v = Word2Vec(sentences=tokens, vector_size=50, window=3, min_count=1, sg=1)\n",
+        "\n",
+        "print(\"\\nPalavras mais similares a 'ótimo':\")\n",
         "try:\n",
-        "    print(modelo_w2v.wv.similarity('ótimo', 'excelente'))\n",
+        "    print(modelo_w2v.wv.most_similar('ótimo'))\n",
         "except KeyError:\n",
-        "    print(\"Alguma das palavras não foi encontrada no vocabulário.\")\n",
-        "\n",
-        "# ===============================================\n",
-        "# 6️⃣ Aplicação prática: vetorizar novas avaliações\n",
-        "# ===============================================\n",
-        "nova_avaliacao = \"A qualidade da câmera é muito boa, mas a bateria dura pouco.\"\n",
-        "nova_avaliacao_proc = preprocessar_texto(nova_avaliacao)\n",
-        "nova_tfidf = tfidf_vectorizer.transform([nova_avaliacao_proc])\n",
-        "\n",
-        "print(\"\\n🔹 Nova avaliação pré-processada:\")\n",
-        "print(nova_avaliacao_proc)\n",
-        "print(\"\\n🔹 Vetor TF-IDF correspondente:\")\n",
-        "print(pd.DataFrame(nova_tfidf.toarray(), columns=tfidf_vectorizer.get_feature_names_out()))\n"
+        "    print(\"A palavra 'ótimo' não está no vocabulário.\")\n"
       ]
     }
   ]
