--- a/PLN_Analise_de_sentimentos.ipynb
+++ b/PLN_Analise_de_sentimentos.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP5QazHN2n23Du+uAH7zufH",
+      "authorship_tag": "ABX9TyPW6gx0KqKIlBmLHNb7Kfyn",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -37,19 +37,24 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "JPE533voOoJk",
-        "outputId": "3e3e359c-e1b7-4ceb-b03b-1e8efc50dff0"
+        "outputId": "f5f10d61-6816-4263-8acb-226f284c12fc"
       },
-      "execution_count": 4,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Requirement already satisfied: gensim in /usr/local/lib/python3.12/dist-packages (4.4.0)\n",
+            "Collecting gensim\n",
+            "  Downloading gensim-4.4.0-cp312-cp312-manylinux_2_24_x86_64.manylinux_2_28_x86_64.whl.metadata (8.4 kB)\n",
             "Requirement already satisfied: numpy>=1.18.5 in /usr/local/lib/python3.12/dist-packages (from gensim) (2.0.2)\n",
             "Requirement already satisfied: scipy>=1.7.0 in /usr/local/lib/python3.12/dist-packages (from gensim) (1.16.3)\n",
             "Requirement already satisfied: smart_open>=1.8.1 in /usr/local/lib/python3.12/dist-packages (from gensim) (7.4.4)\n",
             "Requirement already satisfied: wrapt in /usr/local/lib/python3.12/dist-packages (from smart_open>=1.8.1->gensim) (2.0.0)\n",
+            "Downloading gensim-4.4.0-cp312-cp312-manylinux_2_24_x86_64.manylinux_2_28_x86_64.whl (27.9 MB)\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m27.9/27.9 MB\u001b[0m \u001b[31m17.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25hInstalling collected packages: gensim\n",
+            "Successfully installed gensim-4.4.0\n",
             "Requirement already satisfied: nltk in /usr/local/lib/python3.12/dist-packages (3.9.1)\n",
             "Requirement already satisfied: click in /usr/local/lib/python3.12/dist-packages (from nltk) (8.3.0)\n",
             "Requirement already satisfied: joblib in /usr/local/lib/python3.12/dist-packages (from nltk) (1.5.2)\n",
@@ -61,62 +66,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 10,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "vPSPGP-0ONOm",
-        "outputId": "ec8b05f0-bdd8-46bb-fe60-6e18a4fe3fce"
+        "id": "vPSPGP-0ONOm"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Relatório de Classificação:\n",
-            "              precision    recall  f1-score   support\n",
-            "\n",
-            "    Negativo       0.00      0.00      0.00         2\n",
-            "    Positivo       0.33      1.00      0.50         1\n",
-            "\n",
-            "    accuracy                           0.33         3\n",
-            "   macro avg       0.17      0.50      0.25         3\n",
-            "weighted avg       0.11      0.33      0.17         3\n",
-            "\n",
-            "Matriz de Confusão:\n",
-            "[[0 2]\n",
-            " [0 1]]\n",
-            "\n",
-            "Resultados em novas avaliações:\n",
-            "- A câmera é incrível e a bateria dura o dia todo. → Positivo 😀\n",
-            "- O produto veio quebrado e não liga mais. → Positivo 😀\n",
-            "- Entrega rápida, mas o desempenho é ruim. → Positivo 😀\n",
-            "- Excelente custo-benefício, estou muito satisfeito! → Positivo 😀\n",
-            "\n",
-            "Palavras mais similares a 'ótimo':\n",
-            "[('acabou', 0.2474919706583023), ('terrível', 0.19713576138019562), ('parece', 0.1907748281955719), ('poucas', 0.18167969584465027), ('risca', 0.16631169617176056), ('maravilhoso', 0.1545863002538681), ('desde', 0.12634193897247314), ('dia', 0.11094342917203903), ('tela', 0.1076011136174202), ('expectativas', 0.08770156651735306)]\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "[nltk_data] Downloading package punkt to /root/nltk_data...\n",
-            "[nltk_data]   Package punkt is already up-to-date!\n",
-            "[nltk_data] Downloading package punkt_tab to /root/nltk_data...\n",
-            "[nltk_data]   Package punkt_tab is already up-to-date!\n",
-            "[nltk_data] Downloading package stopwords to /root/nltk_data...\n",
-            "[nltk_data]   Package stopwords is already up-to-date!\n",
-            "/usr/local/lib/python3.12/dist-packages/sklearn/metrics/_classification.py:1565: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
-            "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", len(result))\n",
-            "/usr/local/lib/python3.12/dist-packages/sklearn/metrics/_classification.py:1565: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
-            "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", len(result))\n",
-            "/usr/local/lib/python3.12/dist-packages/sklearn/metrics/_classification.py:1565: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
-            "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", len(result))\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "# ===============================================\n",
         "# Exemplo completo de PLN com Classificação de Sentimentos\n",
@@ -131,14 +85,55 @@
         "from sklearn.metrics import classification_report, confusion_matrix\n",
         "from gensim.models import Word2Vec\n",
         "from nltk.corpus import stopwords\n",
-        "\n",
+        "import string"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "# ===============================================\n",
         "# 1. Recursos do NLTK\n",
         "# ===============================================\n",
         "nltk.download('punkt')\n",
         "nltk.download('punkt_tab')\n",
-        "nltk.download('stopwords')\n",
-        "\n",
+        "nltk.download('stopwords')\n"
+      ],
+      "metadata": {
+        "id": "5WZkxygJWRvN",
+        "outputId": "650bacf1-d7be-422a-e78e-78e2b07e91b8",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "[nltk_data] Downloading package punkt to /root/nltk_data...\n",
+            "[nltk_data]   Package punkt is already up-to-date!\n",
+            "[nltk_data] Downloading package punkt_tab to /root/nltk_data...\n",
+            "[nltk_data]   Package punkt_tab is already up-to-date!\n",
+            "[nltk_data] Downloading package stopwords to /root/nltk_data...\n",
+            "[nltk_data]   Package stopwords is already up-to-date!\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 11
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "# ===============================================\n",
         "# 2. Dataset realista de avaliações\n",
         "# ===============================================\n",
@@ -159,39 +154,86 @@
         "    \"sentimento\": [1, 0, 1, 0, 1, 0, 1, 0, 1, 0]\n",
         "}\n",
         "\n",
-        "df = pd.DataFrame(dados)\n",
-        "\n",
+        "df = pd.DataFrame(dados)"
+      ],
+      "metadata": {
+        "id": "t_sJvp14WUvG"
+      },
+      "execution_count": 12,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "# ===============================================\n",
         "# 3. Função de pré-processamento\n",
         "# ===============================================\n",
         "def preprocessar_texto(texto):\n",
         "    texto = texto.lower()\n",
+        "    texto = texto.replace('\\n', ' ')\n",
         "    texto = re.sub(r'[^a-zA-Zà-úÀ-Ú\\s]', '', texto)\n",
         "    tokens = nltk.word_tokenize(texto, language='portuguese')\n",
+        "    tokens = [t for t in tokens if t not in string.punctuation]\n",
         "    stop_words = set(stopwords.words('portuguese'))\n",
         "    tokens = [t for t in tokens if t not in stop_words and len(t) > 2]\n",
         "    return \" \".join(tokens)\n",
         "\n",
-        "df[\"texto_limpo\"] = df[\"avaliacao\"].apply(preprocessar_texto)\n",
-        "\n",
+        "df[\"texto_limpo\"] = df[\"avaliacao\"].apply(preprocessar_texto)"
+      ],
+      "metadata": {
+        "id": "Q2nDWTMIWX7y"
+      },
+      "execution_count": 13,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "# ===============================================\n",
         "# 4. Representações vetoriais (Bag-of-Words e TF-IDF)\n",
         "# ===============================================\n",
         "vectorizer = TfidfVectorizer()\n",
         "X = vectorizer.fit_transform(df[\"texto_limpo\"])\n",
-        "y = df[\"sentimento\"]\n",
-        "\n",
+        "y = df[\"sentimento\"]"
+      ],
+      "metadata": {
+        "id": "zDkNBySyWcJz"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "# ===============================================\n",
         "# 5. Divisão de dados (treino e teste)\n",
         "# ===============================================\n",
-        "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.3, random_state=42)\n",
-        "\n",
+        "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.3, random_state=42)"
+      ],
+      "metadata": {
+        "id": "jyuA6zfPWedf"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "# ===============================================\n",
         "# 6. Aplicação do Machine Learning: modelo de classificação (Regressão Logística)\n",
         "# ===============================================\n",
         "modelo = LogisticRegression(max_iter=1000)\n",
-        "modelo.fit(X_train, y_train)\n",
-        "\n",
+        "modelo.fit(X_train, y_train)"
+      ],
+      "metadata": {
+        "id": "ZeapOJ41WhRs"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "# ===============================================\n",
         "# 7. Avaliação do modelo\n",
         "# ===============================================\n",
@@ -200,8 +242,17 @@
         "print(classification_report(y_test, y_pred, target_names=[\"Negativo\", \"Positivo\"]))\n",
         "\n",
         "print(\"Matriz de Confusão:\")\n",
-        "print(confusion_matrix(y_test, y_pred))\n",
-        "\n",
+        "print(confusion_matrix(y_test, y_pred))"
+      ],
+      "metadata": {
+        "id": "98CI7crYWi93"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "# ===============================================\n",
         "# 8. Teste com novas avaliações\n",
         "# ===============================================\n",
@@ -221,8 +272,17 @@
         "print(\"\\nResultados em novas avaliações:\")\n",
         "for texto, pred in zip(novas_avaliacoes, predicoes):\n",
         "    sentimento = \"Positivo 😀\" if pred == 1 else \"Negativo 😞\"\n",
-        "    print(f\"- {texto} → {sentimento}\")\n",
-        "\n",
+        "    print(f\"- {texto} → {sentimento}\")"
+      ],
+      "metadata": {
+        "id": "Njqd_HyTWlF8"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "# ===============================================\n",
         "# 9. Word2Vec (para análise semântica complementar)\n",
         "# ===============================================\n",
@@ -233,8 +293,13 @@
         "try:\n",
         "    print(modelo_w2v.wv.most_similar('ótimo'))\n",
         "except KeyError:\n",
-        "    print(\"A palavra 'ótimo' não está no vocabulário.\")\n"
-      ]
+        "    print(\"A palavra 'ótimo' não está no vocabulário.\")"
+      ],
+      "metadata": {
+        "id": "RK_Qp0BHWoL0"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
