--- a/PLN_Analise_de_sentimentos.ipynb
+++ b/PLN_Analise_de_sentimentos.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPW6gx0KqKIlBmLHNb7Kfyn",
+      "authorship_tag": "ABX9TyOVZJ3iNS+FcqKVkNEeZKTy",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -99,11 +99,11 @@
         "nltk.download('stopwords')\n"
       ],
       "metadata": {
-        "id": "5WZkxygJWRvN",
-        "outputId": "650bacf1-d7be-422a-e78e-78e2b07e91b8",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "5WZkxygJWRvN",
+        "outputId": "650bacf1-d7be-422a-e78e-78e2b07e91b8"
       },
       "execution_count": 11,
       "outputs": [
@@ -154,13 +154,36 @@
         "    \"sentimento\": [1, 0, 1, 0, 1, 0, 1, 0, 1, 0]\n",
         "}\n",
         "\n",
-        "df = pd.DataFrame(dados)"
+        "df = pd.DataFrame(dados)\n",
+        "print(df)"
       ],
       "metadata": {
-        "id": "t_sJvp14WUvG"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "t_sJvp14WUvG",
+        "outputId": "c1ecae8c-8394-434f-9d05-57403cd2ce04"
       },
-      "execution_count": 12,
-      "outputs": []
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "                                           avaliacao  sentimento\n",
+            "0       O celular é ótimo, tem uma câmera excelente!           1\n",
+            "1  Horrível! Que produto terrível, não recomendo ...           0\n",
+            "2         Entrega rápida e produto de boa qualidade.           1\n",
+            "3    A bateria dura pouco e esquenta muito. Péssimo!           0\n",
+            "4   Muito bom, atendeu todas as minhas expectativas.           1\n",
+            "5  Não gostei, o material parece frágil e a tela ...           0\n",
+            "6     Superou minhas expectativas, recomendo demais!           1\n",
+            "7  O som é baixo e a bateria acabou em poucas horas.           0\n",
+            "8         Produto maravilhoso, desempenho excelente.           1\n",
+            "9    Defeituoso, não funcionou desde o primeiro dia.           0\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -178,13 +201,36 @@
         "    tokens = [t for t in tokens if t not in stop_words and len(t) > 2]\n",
         "    return \" \".join(tokens)\n",
         "\n",
-        "df[\"texto_limpo\"] = df[\"avaliacao\"].apply(preprocessar_texto)"
+        "df[\"texto_limpo\"] = df[\"avaliacao\"].apply(preprocessar_texto)\n",
+        "print(df[\"texto_limpo\"])"
       ],
       "metadata": {
-        "id": "Q2nDWTMIWX7y"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Q2nDWTMIWX7y",
+        "outputId": "580f4897-a8f4-4053-e419-a1408bcd7aba"
       },
-      "execution_count": 13,
-      "outputs": []
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0                    celular ótimo câmera excelente\n",
+            "1       horrível produto terrível recomendo ninguém\n",
+            "2              entrega rápida produto boa qualidade\n",
+            "3               bateria dura pouco esquenta péssimo\n",
+            "4                    bom atendeu todas expectativas\n",
+            "5    gostei material parece frágil tela risca fácil\n",
+            "6             superou expectativas recomendo demais\n",
+            "7             som baixo bateria acabou poucas horas\n",
+            "8          produto maravilhoso desempenho excelente\n",
+            "9           defeituoso funcionou desde primeiro dia\n",
+            "Name: texto_limpo, dtype: object\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -194,13 +240,89 @@
         "# ===============================================\n",
         "vectorizer = TfidfVectorizer()\n",
         "X = vectorizer.fit_transform(df[\"texto_limpo\"])\n",
-        "y = df[\"sentimento\"]"
+        "y = df[\"sentimento\"]\n",
+        "print(y)\n",
+        "print(X)"
       ],
       "metadata": {
-        "id": "zDkNBySyWcJz"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "zDkNBySyWcJz",
+        "outputId": "b8339be9-4e71-4734-f5f4-6e036e919de9"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0    1\n",
+            "1    0\n",
+            "2    1\n",
+            "3    0\n",
+            "4    1\n",
+            "5    0\n",
+            "6    1\n",
+            "7    0\n",
+            "8    1\n",
+            "9    0\n",
+            "Name: sentimento, dtype: int64\n",
+            "<Compressed Sparse Row sparse matrix of dtype 'float64'\n",
+            "\twith 49 stored elements and shape (10, 43)>\n",
+            "  Coords\tValues\n",
+            "  (0, 6)\t0.5182909034319405\n",
+            "  (0, 42)\t0.5182909034319405\n",
+            "  (0, 7)\t0.5182909034319405\n",
+            "  (0, 16)\t0.44059461896295216\n",
+            "  (1, 23)\t0.4836062152711379\n",
+            "  (1, 31)\t0.3596722024962039\n",
+            "  (1, 40)\t0.4836062152711379\n",
+            "  (1, 34)\t0.4111094652339048\n",
+            "  (1, 26)\t0.4836062152711379\n",
+            "  (2, 31)\t0.348545761726207\n",
+            "  (2, 14)\t0.4686458822988574\n",
+            "  (2, 36)\t0.4686458822988574\n",
+            "  (2, 4)\t0.4686458822988574\n",
+            "  (2, 33)\t0.4686458822988574\n",
+            "  (3, 3)\t0.3911762483232489\n",
+            "  (3, 13)\t0.4601578921271882\n",
+            "  (3, 29)\t0.4601578921271882\n",
+            "  (3, 15)\t0.4601578921271882\n",
+            "  (3, 32)\t0.4601578921271882\n",
+            "  (4, 5)\t0.5182909034319405\n",
+            "  (4, 1)\t0.5182909034319405\n",
+            "  (4, 41)\t0.5182909034319405\n",
+            "  (4, 17)\t0.44059461896295216\n",
+            "  (5, 21)\t0.3779644730092272\n",
+            "  (5, 25)\t0.3779644730092272\n",
+            "  (5, 27)\t0.3779644730092272\n",
+            "  (5, 18)\t0.3779644730092272\n",
+            "  (5, 39)\t0.3779644730092272\n",
+            "  (5, 35)\t0.3779644730092272\n",
+            "  (5, 20)\t0.3779644730092272\n",
+            "  (6, 34)\t0.4579851637885095\n",
+            "  (6, 17)\t0.4579851637885095\n",
+            "  (6, 38)\t0.5387481691380603\n",
+            "  (6, 9)\t0.5387481691380603\n",
+            "  (7, 3)\t0.35535858163071754\n",
+            "  (7, 37)\t0.41802398937415175\n",
+            "  (7, 2)\t0.41802398937415175\n",
+            "  (7, 0)\t0.41802398937415175\n",
+            "  (7, 28)\t0.41802398937415175\n",
+            "  (7, 22)\t0.41802398937415175\n",
+            "  (8, 16)\t0.46968603824569793\n",
+            "  (8, 31)\t0.41091978206201196\n",
+            "  (8, 24)\t0.5525124243793842\n",
+            "  (8, 11)\t0.5525124243793842\n",
+            "  (9, 8)\t0.4472135954999579\n",
+            "  (9, 19)\t0.4472135954999579\n",
+            "  (9, 10)\t0.4472135954999579\n",
+            "  (9, 30)\t0.4472135954999579\n",
+            "  (9, 12)\t0.4472135954999579\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
