--- a/PLN_Analise_de_sentimentos.ipynb
+++ b/PLN_Analise_de_sentimentos.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOVZJ3iNS+FcqKVkNEeZKTy",
+      "authorship_tag": "ABX9TyOEGT6NI3e0ObK8kJiJAAZa",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -249,9 +249,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "zDkNBySyWcJz",
-        "outputId": "b8339be9-4e71-4734-f5f4-6e036e919de9"
+        "outputId": "e100507a-3ec7-43eb-9b1c-aa831c05c54d"
       },
-      "execution_count": 21,
+      "execution_count": 27,
       "outputs": [
         {
           "output_type": "stream",
@@ -330,13 +330,95 @@
         "# ===============================================\n",
         "# 5. Divisão de dados (treino e teste)\n",
         "# ===============================================\n",
-        "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.3, random_state=42)"
+        "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.3, random_state=42)\n",
+        "print(X_train)\n",
+        "print(y_train)\n",
+        "print(X_test)\n",
+        "print(y_test)"
       ],
       "metadata": {
-        "id": "jyuA6zfPWedf"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "jyuA6zfPWedf",
+        "outputId": "c0196a7f-dc27-4127-e004-4e5894e8aaa0"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "<Compressed Sparse Row sparse matrix of dtype 'float64'\n",
+            "\twith 33 stored elements and shape (7, 43)>\n",
+            "  Coords\tValues\n",
+            "  (0, 6)\t0.5182909034319405\n",
+            "  (0, 42)\t0.5182909034319405\n",
+            "  (0, 7)\t0.5182909034319405\n",
+            "  (0, 16)\t0.44059461896295216\n",
+            "  (1, 3)\t0.35535858163071754\n",
+            "  (1, 37)\t0.41802398937415175\n",
+            "  (1, 2)\t0.41802398937415175\n",
+            "  (1, 0)\t0.41802398937415175\n",
+            "  (1, 28)\t0.41802398937415175\n",
+            "  (1, 22)\t0.41802398937415175\n",
+            "  (2, 31)\t0.348545761726207\n",
+            "  (2, 14)\t0.4686458822988574\n",
+            "  (2, 36)\t0.4686458822988574\n",
+            "  (2, 4)\t0.4686458822988574\n",
+            "  (2, 33)\t0.4686458822988574\n",
+            "  (3, 8)\t0.4472135954999579\n",
+            "  (3, 19)\t0.4472135954999579\n",
+            "  (3, 10)\t0.4472135954999579\n",
+            "  (3, 30)\t0.4472135954999579\n",
+            "  (3, 12)\t0.4472135954999579\n",
+            "  (4, 5)\t0.5182909034319405\n",
+            "  (4, 1)\t0.5182909034319405\n",
+            "  (4, 41)\t0.5182909034319405\n",
+            "  (4, 17)\t0.44059461896295216\n",
+            "  (5, 3)\t0.3911762483232489\n",
+            "  (5, 13)\t0.4601578921271882\n",
+            "  (5, 29)\t0.4601578921271882\n",
+            "  (5, 15)\t0.4601578921271882\n",
+            "  (5, 32)\t0.4601578921271882\n",
+            "  (6, 34)\t0.4579851637885095\n",
+            "  (6, 17)\t0.4579851637885095\n",
+            "  (6, 38)\t0.5387481691380603\n",
+            "  (6, 9)\t0.5387481691380603\n",
+            "0    1\n",
+            "7    0\n",
+            "2    1\n",
+            "9    0\n",
+            "4    1\n",
+            "3    0\n",
+            "6    1\n",
+            "Name: sentimento, dtype: int64\n",
+            "<Compressed Sparse Row sparse matrix of dtype 'float64'\n",
+            "\twith 16 stored elements and shape (3, 43)>\n",
+            "  Coords\tValues\n",
+            "  (0, 16)\t0.46968603824569793\n",
+            "  (0, 31)\t0.41091978206201196\n",
+            "  (0, 24)\t0.5525124243793842\n",
+            "  (0, 11)\t0.5525124243793842\n",
+            "  (1, 23)\t0.4836062152711379\n",
+            "  (1, 31)\t0.3596722024962039\n",
+            "  (1, 40)\t0.4836062152711379\n",
+            "  (1, 34)\t0.4111094652339048\n",
+            "  (1, 26)\t0.4836062152711379\n",
+            "  (2, 21)\t0.3779644730092272\n",
+            "  (2, 25)\t0.3779644730092272\n",
+            "  (2, 27)\t0.3779644730092272\n",
+            "  (2, 18)\t0.3779644730092272\n",
+            "  (2, 39)\t0.3779644730092272\n",
+            "  (2, 35)\t0.3779644730092272\n",
+            "  (2, 20)\t0.3779644730092272\n",
+            "8    1\n",
+            "1    0\n",
+            "5    0\n",
+            "Name: sentimento, dtype: int64\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -345,13 +427,26 @@
         "# 6. Aplicação do Machine Learning: modelo de classificação (Regressão Logística)\n",
         "# ===============================================\n",
         "modelo = LogisticRegression(max_iter=1000)\n",
-        "modelo.fit(X_train, y_train)"
+        "modelo.fit(X_train, y_train)\n",
+        "print(modelo)"
       ],
       "metadata": {
-        "id": "ZeapOJ41WhRs"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ZeapOJ41WhRs",
+        "outputId": "e158e4d8-e423-4efa-a664-304fe1e3ff06"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "LogisticRegression(max_iter=1000)\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -367,10 +462,46 @@
         "print(confusion_matrix(y_test, y_pred))"
       ],
       "metadata": {
-        "id": "98CI7crYWi93"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "98CI7crYWi93",
+        "outputId": "cef0672d-2898-4ce9-88db-460dcfa3de19"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 29,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Relatório de Classificação:\n",
+            "              precision    recall  f1-score   support\n",
+            "\n",
+            "    Negativo       0.00      0.00      0.00         2\n",
+            "    Positivo       0.33      1.00      0.50         1\n",
+            "\n",
+            "    accuracy                           0.33         3\n",
+            "   macro avg       0.17      0.50      0.25         3\n",
+            "weighted avg       0.11      0.33      0.17         3\n",
+            "\n",
+            "Matriz de Confusão:\n",
+            "[[0 2]\n",
+            " [0 1]]\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "/usr/local/lib/python3.12/dist-packages/sklearn/metrics/_classification.py:1565: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+            "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", len(result))\n",
+            "/usr/local/lib/python3.12/dist-packages/sklearn/metrics/_classification.py:1565: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+            "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", len(result))\n",
+            "/usr/local/lib/python3.12/dist-packages/sklearn/metrics/_classification.py:1565: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+            "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", len(result))\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -397,10 +528,27 @@
         "    print(f\"- {texto} → {sentimento}\")"
       ],
       "metadata": {
-        "id": "Njqd_HyTWlF8"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Njqd_HyTWlF8",
+        "outputId": "186c93dd-256b-4ed4-af75-7405baeaa9e0"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 30,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\n",
+            "Resultados em novas avaliações:\n",
+            "- A câmera é incrível e a bateria dura o dia todo. → Positivo 😀\n",
+            "- O produto veio quebrado e não liga mais. → Positivo 😀\n",
+            "- Entrega rápida, mas o desempenho é ruim. → Positivo 😀\n",
+            "- Excelente custo-benefício, estou muito satisfeito! → Positivo 😀\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -418,10 +566,24 @@
         "    print(\"A palavra 'ótimo' não está no vocabulário.\")"
       ],
       "metadata": {
-        "id": "RK_Qp0BHWoL0"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "RK_Qp0BHWoL0",
+        "outputId": "16224327-ece2-47e0-90c4-2aacf34f281f"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 31,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\n",
+            "Palavras mais similares a 'ótimo':\n",
+            "[('acabou', 0.2474919706583023), ('terrível', 0.19713576138019562), ('parece', 0.1907748281955719), ('poucas', 0.18167969584465027), ('risca', 0.16631169617176056), ('maravilhoso', 0.1545863002538681), ('desde', 0.12634193897247314), ('dia', 0.11094342917203903), ('tela', 0.1076011136174202), ('expectativas', 0.08770156651735306)]\n"
+          ]
+        }
+      ]
     }
   ]
 }
