--- a/UA2/PLN_speech_recognition_validation.ipynb
+++ b/UA2/PLN_speech_recognition_validation.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP1IFYgoCgevipc+yhixR5m",
+      "authorship_tag": "ABX9TyNnGJvu60bMXBUvYOs7f8Ql",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -338,43 +338,108 @@
         }
       ],
       "source": [
-        "# ==============================================================\n",
-        "# SISTEMA COMPLETO DE RECONHECIMENTO DE VOZ COM WHISPER (COLAB)\n",
-        "# ==============================================================\n",
+        "# ============================================\n",
+        "#  SISTEMA COMPLETO DE RECONHECIMENTO DE VOZ - SIMPLIFICADO (CNN)\n",
+        "# ============================================\n",
+        "import numpy as np\n",
+        "import librosa\n",
+        "import librosa.display\n",
+        "import matplotlib.pyplot as plt\n",
+        "from sklearn.model_selection import train_test_split\n",
+        "from sklearn.metrics import accuracy_score, f1_score, confusion_matrix\n",
+        "from jiwer import wer, cer\n",
+        "import tensorflow as tf\n",
+        "from tensorflow.keras import layers, models\n",
         "\n",
-        "# 1) Instalar dependências\n",
-        "!pip install -q openai-whisper ffmpeg-python\n",
+        "# -------------------------------------------------------\n",
+        "# GERAR DADOS SINTÉTICOS (demonstrativo educacional)\n",
+        "# -------------------------------------------------------\n",
+        "def gerar_exemplo():\n",
+        "    sr = 16000\n",
+        "    audio = np.random.randn(sr)  # ruído como áudio simulado\n",
+        "    label = np.random.choice([\"sim\", \"não\"])\n",
+        "    return audio, label\n",
         "\n",
-        "import whisper\n",
-        "from google.colab import files\n",
+        "audios = []\n",
+        "labels = []\n",
         "\n",
-        "# 2) Upload do arquivo de áudio\n",
-        "print(\"Envie um arquivo de áudio (wav/mp3/m4a)\")\n",
-        "uploaded = files.upload()\n",
+        "for _ in range(200):\n",
+        "    x, y = gerar_exemplo()\n",
+        "    audios.append(x)\n",
+        "    labels.append(0 if y == \"sim\" else 1)\n",
         "\n",
-        "audio_path = list(uploaded.keys())[0]\n",
+        "# -------------------------------------------------------\n",
+        "# CONVERTE PARA MEL-SPECTROGRAM\n",
+        "# -------------------------------------------------------\n",
+        "def audio_to_mel(aud):\n",
+        "    mel = librosa.feature.melspectrogram(y=aud, sr=16000)\n",
+        "    mel_db = librosa.power_to_db(mel, ref=np.max)\n",
+        "    return mel_db\n",
         "\n",
-        "# 3) Carregar modelo\n",
-        "print(\"Carregando modelo...\")\n",
-        "model = whisper.load_model(\"small\")  # pode usar: tiny, base, small, medium, large\n",
+        "X = np.array([audio_to_mel(a) for a in audios])\n",
+        "X = X[..., np.newaxis]\n",
+        "y = np.array(labels)\n",
         "\n",
-        "# 4) Transcrever áudio\n",
-        "print(\"Transcrevendo áudio...\")\n",
-        "result = model.transcribe(audio_path, fp16=False)\n",
+        "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2)\n",
         "\n",
-        "# 5) Exibir transcrição\n",
-        "print(\"\\n=== TRANSCRIÇÃO FINAL ===\\n\")\n",
-        "print(result[\"text\"])\n",
+        "# -------------------------------------------------------\n",
+        "# MODELO CNN SIMPLES\n",
+        "# -------------------------------------------------------\n",
+        "model = models.Sequential([\n",
+        "    layers.Conv2D(16, (3,3), activation='relu', input_shape=X_train[0].shape),\n",
+        "    layers.MaxPooling2D((2,2)),\n",
+        "    layers.Conv2D(32, (3,3), activation='relu'),\n",
+        "    layers.MaxPooling2D((2,2)),\n",
+        "    layers.Flatten(),\n",
+        "    layers.Dense(32, activation='relu'),\n",
+        "    layers.Dense(2, activation='softmax')\n",
+        "])\n",
         "\n",
-        "# 6) Salvar transcrição em .txt\n",
-        "output_filename = audio_path + \".txt\"\n",
-        "with open(output_filename, \"w\") as f:\n",
-        "    f.write(result[\"text\"])\n",
+        "model.compile(optimizer='adam', loss='sparse_categorical_crossentropy')\n",
+        "history = model.fit(X_train, y_train, epochs=5, validation_split=0.2)\n",
         "\n",
-        "print(f\"\\nArquivo salvo como: {output_filename}\")\n",
+        "# -------------------------------------------------------\n",
+        "# PREDIÇÕES\n",
+        "# -------------------------------------------------------\n",
+        "pred = model.predict(X_test)\n",
+        "y_pred = np.argmax(pred, axis=1)\n",
         "\n",
-        "# 7) Permitir download do arquivo\n",
-        "files.download(output_filename)\n"
+        "# ============================================\n",
+        "#  BLOCO PADRÃO DE MÉTRICAS (USADO NOS 3 CÓDIGOS)\n",
+        "# ============================================\n",
+        "from sklearn.metrics import classification_report, ConfusionMatrixDisplay\n",
+        "from nltk.translate.bleu_score import sentence_bleu\n",
+        "\n",
+        "print(\"\\n=== MÉTRICAS ===\")\n",
+        "acc = accuracy_score(y_test, y_pred)\n",
+        "f1 = f1_score(y_test, y_pred, average=\"weighted\")\n",
+        "\n",
+        "print(\"Acurácia:\", acc)\n",
+        "print(\"F1-score:\", f1)\n",
+        "\n",
+        "# Como ASR envolve texto, criamos exemplos fictícios:\n",
+        "true_sentences = [\"sim\" if t == 0 else \"não\" for t in y_test]\n",
+        "pred_sentences = [\"sim\" if p == 0 else \"não\" for p in y_pred]\n",
+        "\n",
+        "print(\"WER:\", wer(true_sentences, pred_sentences))\n",
+        "print(\"CER:\", cer(true_sentences, pred_sentences))\n",
+        "\n",
+        "bleu = np.mean([sentence_bleu([ts.split()], ps.split())\n",
+        "                for ts, ps in zip(true_sentences, pred_sentences)])\n",
+        "print(\"BLEU:\", bleu)\n",
+        "\n",
+        "# Matriz de confusão\n",
+        "cm = confusion_matrix(y_test, y_pred)\n",
+        "disp = ConfusionMatrixDisplay(cm)\n",
+        "disp.plot()\n",
+        "plt.title(\"Matriz de Confusão - Speech Recognition\")\n",
+        "plt.show()\n",
+        "\n",
+        "# Plot de acurácia/validação\n",
+        "plt.plot(history.history['loss'])\n",
+        "plt.plot(history.history['val_loss'])\n",
+        "plt.title(\"Loss / Val Loss\")\n",
+        "plt.show()\n"
       ]
     }
   ]
