--- a/UA2/PLN_speech_recognition_validation.ipynb
+++ b/UA2/PLN_speech_recognition_validation.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNnGJvu60bMXBUvYOs7f8Ql",
+      "authorship_tag": "ABX9TyP7Uli/+cohYTH+cEJc9BSR",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -339,7 +339,7 @@
       ],
       "source": [
         "# ============================================\n",
-        "#  SISTEMA COMPLETO DE RECONHECIMENTO DE VOZ - SIMPLIFICADO (CNN)\n",
+        "#  RECONHECIMENTO DE VOZ - SIMPLIFICADO (CNN)\n",
         "# ============================================\n",
         "import numpy as np\n",
         "import librosa\n",
