--- a/UA1/PLN_NLTK.ipynb
+++ b/UA1/PLN_NLTK.ipynb
@@ -3,7 +3,8 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -11,6 +12,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/nobertomaciel/PLN-ANIMA/blob/main/UA1/PLN_NLTK.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "code",
       "metadata": {
@@ -24,7 +35,7 @@
         "# instala a o Natural Language Tool Kit (https://www.nltk.org/)\n",
         "!pip install nltk"
       ],
-      "execution_count": 76,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -57,7 +68,7 @@
         "from sklearn.feature_extraction.text import CountVectorizer\n",
         "import requests"
       ],
-      "execution_count": 77,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -82,7 +93,7 @@
         "id": "umBmdOPj2_ew",
         "outputId": "acdc9381-ab6b-48fa-8f67-ebda89496608"
       },
-      "execution_count": 78,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -132,7 +143,7 @@
         "texto = texto.replace('\\n',' ')\n",
         "print(texto)"
       ],
-      "execution_count": 79,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -161,7 +172,7 @@
         "for i,sent in enumerate(sentencas):\n",
         "     print(i,'-',sent)"
       ],
-      "execution_count": 80,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -193,7 +204,7 @@
         "palavras = word_tokenize(texto, language='portuguese')\n",
         "print(palavras)"
       ],
-      "execution_count": 81,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -222,7 +233,7 @@
         "for i,sent in enumerate(sentencas):\n",
         "     print(i,'-',word_tokenize(sent, language='portuguese'))"
       ],
-      "execution_count": 82,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -256,7 +267,7 @@
         "punctuations = list(string.punctuation)\n",
         "print(punctuations)"
       ],
-      "execution_count": 83,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -283,7 +294,7 @@
         "    sent_sem_pontuacao = [i for i in word_tokenize(sent, language='portuguese') if i not in punctuations]\n",
         "    print(i,'-',sent_sem_pontuacao)"
       ],
-      "execution_count": 84,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -313,7 +324,7 @@
         "stopwords = nltk.corpus.stopwords.words('portuguese')\n",
         "print(stopwords)"
       ],
-      "execution_count": 85,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -341,7 +352,7 @@
         "    sent_sem_stopwords = [i for i in sent_sem_pontuacao if i not in stopwords]\n",
         "    print(i,'-',sent_sem_stopwords)"
       ],
-      "execution_count": 86,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -386,7 +397,7 @@
         "# c) Agrupamento de documentos (clustering)\n",
         "# d) Detecção de temas (topic modeling)"
       ],
-      "execution_count": 87,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
