--- a/UA2/PLN_speech_recognition.ipynb
+++ b/UA2/PLN_speech_recognition.ipynb
@@ -341,6 +341,10 @@
         "# SISTEMA COMPLETO DE RECONHECIMENTO DE VOZ COM WHISPER (COLAB)\n",
         "# ==============================================================\n",
         "\n",
+        "# OBSERVAÇÃO:\n",
+        "# ao rodar o código, surgirá um formulário no final desse bloco para que você envie um arquivo mp3 para ser analisado\n",
+        "# vá até o final da página e submeta o arquivo. Você pode usar o mp3 do repositório.\n",
+        "\n",
         "# 1) Instalar dependências\n",
         "!pip install -q openai-whisper ffmpeg-python\n",
         "\n",
